# BP-SourceCode

./: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  README.md  engine.cpp  engine.h  gameinstance.cpp  gameinstance.h  imageResource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
